--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
     "combined-stream": "^1.0.8",
+    "cors": "^2.8.5",
     "delayed-stream": "^1.0.0",
     "express": "^4.18.2",
     "follow-redirects": "^1.15.2",
